# solo-surveillance

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.ja.md  README.md  config.example.yaml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md  homeassistant.md  scenarios.md
scripts/: .gitignore  event_logger.sh  test.sh
surveillance/: __init__.py  __main__.py  config_loader.py  hooks.py  http_server.py  main.py  motion.py  onvif.py  recordings.py  region.py  stream.py  vision_burst.py
surveillance/detectors/: __init__.py  base.py  llm_vision.py  person_yolo.py  pipeline.py
surveillance/notifiers/: __init__.py  hass.py  hooks.py
surveillance/static/: index.html
tests/: test_llm_vision.py  test_person_yolo.py  test_pipeline.py
