[project]
name = "solo-surveillance"
version = "0.1.0"
description = "自托管、轻量、纯本地运行的 AI 监控 NVR 系统"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "ultralytics>=8.0.0",
    "onvif-zeep>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["surveillance"]

[project.scripts]
solo-surveillance = "surveillance.main:main"

[tool.uv]
dev-dependencies = []
